<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/mAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/mToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            app:contentInsetStartWithNavigation="0dp"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_logohomepage" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgUser"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_gravity="end"
                android:layout_marginEnd="@dimen/margin_16dp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="@dimen/margin_16dp">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="10dp" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imgNotif"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="@dimen/margin_16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:srcCompat="@drawable/ic_notif" />

                <androidx.constraintlayout.widget.Group
                    android:id="@+id/notifCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:constraint_referenced_ids="tvNotif,viewCircle" />

                <View
                    android:id="@+id/viewCircle"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/circle_red"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@id/guideline" />

                <TextView
                    android:id="@+id/tvNotif"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/muli_semibold_family"
                    android:text="2"
                    android:textColor="@color/colorWhite"
                    android:textSize="11sp"
                    app:layout_constraintBottom_toBottomOf="@id/viewCircle"
                    app:layout_constraintEnd_toEndOf="@id/viewCircle"
                    app:layout_constraintStart_toStartOf="@id/viewCircle"
                    app:layout_constraintTop_toTopOf="@id/viewCircle" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/mSwipeRefresh"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mAppBar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_bs_illustratsihomepage" />

                <TextView
                    android:id="@+id/tvLabelKelas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_16dp"
                    android:layout_marginTop="32dp"
                    android:fontFamily="@font/muli_semibold_family"
                    android:text="KELAS KAMU"
                    android:textColor="@color/colorFontLabel1"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvKelas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/muli_extra_bold_family"
                    android:text="8"
                    android:textColor="@color/fontBold"
                    android:textSize="38sp"
                    app:layout_constraintStart_toStartOf="@id/tvLabelKelas"
                    app:layout_constraintTop_toBottomOf="@id/tvLabelKelas" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView"
                    android:layout_width="0dp"
                    android:layout_height="108dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    app:cardElevation="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvKelas">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/icSkill"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_16dp"
                            android:contentDescription="@string/content_desc"
                            app:layout_constraintEnd_toEndOf="@id/viewSkill"
                            app:layout_constraintStart_toStartOf="@id/viewSkill"
                            app:layout_constraintTop_toTopOf="@id/viewSkill"
                            app:srcCompat="@drawable/ic_skills" />

                        <ImageView
                            android:id="@+id/icKelasSaya"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_16dp"
                            app:layout_constraintEnd_toEndOf="@id/viewKelasSaya"
                            app:layout_constraintStart_toStartOf="@id/viewKelasSaya"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/ic_kelassaya" />

                        <ImageView
                            android:id="@+id/icEvent"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_16dp"
                            app:layout_constraintEnd_toEndOf="@id/viewEvent"
                            app:layout_constraintStart_toStartOf="@id/viewEvent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/ic_event" />

                        <TextView
                            android:id="@+id/labelSkill"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="7dp"
                            android:fontFamily="@font/muli_semibold_family"
                            android:text="@string/label_skill"
                            android:textColor="@color/fontBold"
                            android:textSize="15sp"
                            app:layout_constraintEnd_toEndOf="@id/icSkill"
                            app:layout_constraintStart_toStartOf="@id/icSkill"
                            app:layout_constraintTop_toBottomOf="@id/icSkill" />

                        <TextView
                            android:id="@+id/LabelKelasSaya"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="7dp"
                            android:fontFamily="@font/muli_semibold_family"
                            android:text="@string/label_products"
                            android:textColor="@color/fontBold"
                            android:textSize="15sp"
                            app:layout_constraintEnd_toEndOf="@id/icKelasSaya"
                            app:layout_constraintStart_toStartOf="@id/icKelasSaya"
                            app:layout_constraintTop_toBottomOf="@id/icKelasSaya" />

                        <TextView
                            android:id="@+id/LabelEvent"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="7dp"
                            android:fontFamily="@font/muli_semibold_family"
                            android:text="@string/label_event"
                            android:textColor="@color/fontBold"
                            android:textSize="15sp"
                            app:layout_constraintEnd_toEndOf="@id/icEvent"
                            app:layout_constraintStart_toStartOf="@id/icEvent"
                            app:layout_constraintTop_toBottomOf="@id/icEvent" />

                        <View
                            android:layout_width="1dp"
                            android:layout_height="59dp"
                            android:background="#E0E1E2"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="@id/viewKelasSaya"
                            app:layout_constraintTop_toTopOf="parent" />

                        <View
                            android:layout_width="1dp"
                            android:layout_height="59dp"
                            android:background="#E0E1E2"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="@id/viewKelasSaya"
                            app:layout_constraintTop_toTopOf="parent" />

                        <View
                            android:id="@+id/viewSkill"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:background="?attr/selectableItemBackground"
                            app:layout_constraintEnd_toStartOf="@id/viewKelasSaya"
                            app:layout_constraintStart_toStartOf="parent" />

                        <View
                            android:id="@+id/viewKelasSaya"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:background="?attr/selectableItemBackground"
                            app:layout_constraintEnd_toStartOf="@id/viewEvent"
                            app:layout_constraintStart_toEndOf="@id/viewSkill" />

                        <View
                            android:id="@+id/viewEvent"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:background="?attr/selectableItemBackground"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@id/viewKelasSaya" />


                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/tvLabelSkillPopuler"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:fontFamily="@font/muli_extra_bold_family"
                    android:text="@string/label_skill_populer"
                    android:textColor="@color/fontBold"
                    android:textSize="19sp"
                    app:layout_constraintStart_toStartOf="@id/tvLabelKelas"
                    app:layout_constraintTop_toBottomOf="@id/cardView" />

                <TextView
                    android:id="@+id/tvLabelSemuaSkillPopuler"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="34dp"
                    android:fontFamily="@font/muli_semibold_family"
                    android:text="@string/label_semua_skill"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="@id/cardView"
                    app:layout_constraintTop_toBottomOf="@id/cardView" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/mRecyclerSkillPopular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/tvLabelSkillPopuler"
                    tools:itemCount="3"
                    tools:listitem="@layout/item_list_skill_populer" />

                <TextView
                    android:id="@+id/tvLabelEvent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:fontFamily="@font/muli_extra_bold_family"
                    android:text="@string/label_event_berikutnya"
                    android:textColor="@color/fontBold"
                    android:textSize="19sp"
                    app:layout_constraintStart_toStartOf="@id/tvLabelKelas"
                    app:layout_constraintTop_toBottomOf="@id/mRecyclerSkillPopular" />

                <TextView
                    android:id="@+id/tvLabelSemuaEvent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="34dp"
                    android:fontFamily="@font/muli_semibold_family"
                    android:text="@string/label_semua_event"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="@id/cardView"
                    app:layout_constraintTop_toBottomOf="@id/mRecyclerSkillPopular" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/mRecyclerEvent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/tvLabelEvent"
                    tools:itemCount="3"
                    tools:listitem="@layout/item_list_skill_populer" />

                <TextView
                    android:id="@+id/tvLabelPromo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:fontFamily="@font/muli_extra_bold_family"
                    android:text="@string/label_promo_skills"
                    android:textColor="@color/fontBold"
                    android:textSize="19sp"
                    app:layout_constraintStart_toStartOf="@id/tvLabelKelas"
                    app:layout_constraintTop_toBottomOf="@id/mRecyclerEvent" />

                <TextView
                    android:id="@+id/tvLabelSemuaPromo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="34dp"
                    android:fontFamily="@font/muli_semibold_family"
                    android:text="@string/label_semua_promo"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="@id/cardView"
                    app:layout_constraintTop_toBottomOf="@id/mRecyclerEvent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/mRecyclerPromo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_16dp"
                    app:layout_constraintTop_toBottomOf="@id/tvLabelPromo"
                    tools:itemCount="3"
                    tools:listitem="@layout/item_list_skill_populer" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <include layout="@layout/item_loading" />
</androidx.constraintlayout.widget.ConstraintLayout>